[package]
name = "kafka"
version = "0.1.0"
edition = "2021"


[features]
default = ["json"]
#Sdefault = ["flexbuffers"]
flexbuffers = ["dep:flexbuffers"]
json = ["dep:serde_json"]

[dev-dependencies]
logger = {git = "https://github.com/P40b0s/logger.git"}
tokio-test= {version ="0.4.4"}

[dependencies]
rdkafka="0.36.2"
tokio= {version = "1.41.0", features = ["macros", "rt", "rt-multi-thread", "bytes"] }
serde_json = {version = "1.0.117", optional = true}
flexbuffers= {version="2.0.0", optional = true}
serde = { version = "1.0.213", features = ["derive"] }
futures="0.3.31"
thiserror="1.0.65"
log="0.4.22"